# utopia-hls

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_STYLE.md  MLIR.cmake  README.md  a.out  annealing.txt  build.sh  config.json  extern_modules.sv  filelist.f  real.txt  rebuild.sh  run-tests.sh  tool-run.sh
src/: CMakeLists.txt  Makefile  README.md  config.h.in  debug_file.txt  main.cpp  options.h  test.hil
src/app/: README.md
src/base/: README.md
src/base/engine/: context.h  engine.h  storage.h
src/base/model/: hash.h  link.h  node.h  signal.h
src/data/: README.md
src/data/ctemplate/: ext_ril.tpl  ext_verilog.tpl  gate_verilog.tpl  tbench_verilog.tpl  top_firrtl.tpl
src/ext/: README.md
src/hls/: CMakeLists.txt  README.md
src/hls/compiler/: compiler.cpp  compiler.h
src/hls/debugger/: debugger.cpp  debugger.h  eq_checker.cpp  eq_checker.h
src/hls/generator/: generator
src/hls/mapper/: mapper.cpp  mapper.h
src/hls/mapper/config/: hwconfig.cpp  hwconfig.h
src/hls/model/: CMakeLists.txt  constraint.h  indicators.h  model.cpp  model.h  parameters.h  printer.cpp  printer.h  transform.cpp  transform.h
src/hls/model/dfcir/: CMakeLists.txt
src/hls/model/mlir/: CMakeLists.txt  README.md
src/hls/parser/: lexer.l  parser.h  parser.y
src/hls/parser/cal/: Makefile  lex_tokens.l  parser.h  parser_cal.y  structs.hpp
src/hls/parser/dfc/: dfc.h  kernel.cpp  kernel.h  stream.cpp  stream.h  types.h
src/hls/parser/hil/: CMakeLists.txt  builder.cpp  builder.h  lexer.l  parser.cpp  parser.h  parser.y
src/hls/runtime/: build.sh  device_api.cc  device_api.h  logging.h  runtime.cc  runtime.h
src/hls/scheduler/: dijkstra.cpp  dijkstra.h  dijkstra_impl.h  flow_solver.cpp  flow_solver.h  latency_balancer_base.h  latency_solver.cpp  latency_solver.h  lp_helper.cpp  lp_helper.h  param_optimizer.cpp  param_optimizer.h  param_optimizer_impl.h  scheduler.cpp  scheduler.h  simulated_annealing.cpp  simulated_annealing.h  solver.cpp  solver.h  topological_balancer.cpp  topological_balancer.h
src/hls/scheduler/dse/: design_explorer.h
src/hls/scheduler/optimizers/: abstract_optimizer.cpp  abstract_optimizer.h  simple_optimizer.cpp  simple_optimizer.h  simulated_annealing_optimizer.cpp  simulated_annealing_optimizer.h
src/hls/xmlparser/: library_catalog.xml  xmlparser.cpp  xmlparser.h
src/main/: Makefile  main.cpp  test.hil  test.ril
src/main/ext/: README.md
src/main/gate/: README.md  flibrary.cpp  flibrary.h  gate.cpp  gate.h  gevent.cpp  gevent.h  gsymbol.cpp  gsymbol.h  netlist.cpp  netlist.h  signal.cpp  signal.h
src/main/gate/model/: gate.cpp  gate.h  gsymbol.cpp  gsymbol.h  netlist.cpp  netlist.h  signal.cpp  signal.h
src/main/hls/: README.md
src/main/hls/builder/: builder.h
src/main/hls/model/: model.h  (+1 more)
src/main/ir/: Makefile  event.cpp  event.h  function.cpp  function.h  main.cpp  net.cpp  net.h  pnode.cpp  pnode.h  utils.cpp  utils.h  variable.h  vnode.cpp  vnode.h
src/main/rtl/: README.md  event.cpp  event.h  fsymbol.cpp  fsymbol.h  function.cpp  function.h  net.cpp  net.h  pnode.cpp  pnode.h  variable.h  vnode.cpp  vnode.h
src/main/util/: README.md  utils.h
src/main/utils/: utils.cpp  utils.h
src/model/: CMakeLists.txt
src/model/dfcir/: CMakeLists.txt
src/model/dfcxx/: CMakeLists.txt
src/test/: Makefile  sample_test.cpp
src/util/: CMakeLists.txt  README.md  assert.h  fm.cpp  fm.h  fm_hgraph.cpp  fm_hgraph.h  graph.h  logging.h  math.h  partition_hgraph.cpp  partition_hgraph.h  path.cpp  path.h  set.h  singleton.h  string.cpp  string.h  utils.cpp  utils.h
src/utils/: CMakeLists.txt  README.md  assert.h  fm.cpp  math.h  partition_hgraph.h  set.h  string.cpp  string.h
test/: CMakeLists.txt  README.md  debugger_test.cpp  hil_test.cpp  ril_test.cpp  sample_test.cpp  scheduler_test.cpp  test_main.cpp
test/data/: addconst.mlir  idct.mlir  matrixmul2.mlir  movingaverage.mlir  movingsum.mlir  muxmul.mlir  polynomial2.mlir  scalar3.mlir
test/data/fm/: graph_link_250.txt  graph_rand_250.txt  test_Kahng_in.txt  test_Kahng_out1.txt  test_Kahng_out2.txt  test_gate_out.txt
test/data/hil/: feedback.hil  idct.hil  idct.hil.dot  idct.hil_dijkstra.dot  idct.hil_solve.dot  idct_row.hil  idct_row.hil_dijkstra.dot  idct_row.hil_solve.dot  one_kernel.hil  one_kernel_clone.hil  source_sink.hil  source_sink_clone.hil  test.hil.dot  test.hil_dijkstra.dot  test.hil_solve.dot  test_clone.hil  test_instance.hil  test_small.hil
test/examples/: CMakeLists.txt
test/examples/addconst/: CMakeLists.txt  addconst.mlir  addconst_dfcir.cpp  addconst_dfcxx.cpp
test/examples/idct/: CMakeLists.txt  idct.mlir  idct_dfcir.cpp  idct_dfcxx.cpp
test/examples/matrixmul2/: CMakeLists.txt  matrixmul2_dfcir.cpp  matrixmul2_dfcxx.cpp
test/examples/movingaverage/: CMakeLists.txt  movingaverage.mlir  movingaverage_dfcir.cpp
test/examples/movingsum/: CMakeLists.txt  movingsum_dfcir.cpp  movingsum_dfcxx.cpp
test/examples/muxmul/: CMakeLists.txt  muxmul.mlir  muxmul_dfcir.cpp  muxmul_dfcxx.cpp
test/examples/polynomial2/: CMakeLists.txt  polynomial2_dfcir.cpp  polynomial2_dfcxx.cpp
test/examples/scalar3/: CMakeLists.txt  scalar3.mlir  scalar3_dfcir.cpp  scalar3_dfcxx.cpp
test/hil/: idct.hil  test.hil  test_clone.hil
test/hls/compiler/: compiler_dfc_test.cpp  compiler_dfc_to_ril_test.cpp  compiler_hil_test.cpp  compiler_test.cpp  mulgen.cpp
test/hls/debugger/: debugger_test.cpp  eq_checker_test.cpp
test/hls/scheduler/: param_optimizer_test.cpp  scheduler_test.cpp  simulated_annealing_test.cpp  test_hil_model.h
test/lib/minisat/: minisat_test.cpp
test/model/: CMakeLists.txt
test/model/dfcir/: CMakeLists.txt  addconst.cpp  idct.cpp  matrixmul2.cpp  movingaverage.cpp  movingsum.cpp  muxmul.cpp  polynomial2.cpp  scalar3.cpp
test/model/dfcxx/: CMakeLists.txt  addconst.cpp  graph.cpp  idct.cpp  matrixmul2.cpp  movingsum.cpp  muxmul.cpp  output_formats.cpp  polynomial2.cpp  scalar3.cpp  type_builder.cpp  typebuilder.cpp  var_builder.cpp  varbuilder.cpp
test/util/: fm_graph.cpp  fm_graph.h  graph_traverse_test.cpp
test/utils/: graph_traverse_test.cpp
(+568 files in other folders)
