add_subdirectory(parser/hil)
add_subdirectory(model/mlir)

add_library(HLS OBJECT
  compiler/compiler.cpp
  debugger/debugger.cpp
  library/element_generator.cpp
  library/element_core.cpp
  library/element_internal.cpp
  library/internal/verilog/add.cpp
  library/internal/verilog/cast.cpp
  library/internal/verilog/clip.cpp
  library/internal/verilog/const.cpp
  library/internal/verilog/default.cpp
  library/internal/verilog/delay.cpp
  library/internal/verilog/dup.cpp
  library/internal/verilog/element_internal_verilog.cpp
  library/internal/verilog/eq.cpp
  library/internal/verilog/ge.cpp
  library/internal/verilog/gt.cpp
  library/internal/verilog/le.cpp
  library/internal/verilog/lt.cpp
  library/internal/verilog/merge.cpp
  library/internal/verilog/mul.cpp
  library/internal/verilog/mux.cpp
  library/internal/verilog/ne.cpp
  library/internal/verilog/sink.cpp
  library/internal/verilog/shl8.cpp
  library/internal/verilog/shl11.cpp
  library/internal/verilog/shr3.cpp
  library/internal/verilog/shr8.cpp
  library/internal/verilog/shr14.cpp
  library/internal/verilog/source.cpp
  library/internal/verilog/split.cpp
  library/internal/verilog/sub.cpp
  library/internal/ril/element_internal_ril.cpp
  library/internal/ril/add.cpp
  library/internal/ril/mul.cpp
  library/internal/ril/sub.cpp
  library/ipxact_parser.cpp
  library/library.cpp
  mapper/config/hwconfig.cpp
  mapper/mapper.cpp
  model/model.cpp
  model/transform.cpp
  model/printer.cpp
  parser/dfc/kernel.cpp
  parser/dfc/stream.cpp
  parser/dfc/internal/builder.cpp
  scheduler/dijkstra.h
  scheduler/flow_solver.cpp
  scheduler/latency_balancer_base.h
  scheduler/latency_solver.cpp
  scheduler/lp_helper.cpp
  scheduler/optimizers/abstract_optimizer.cpp
  scheduler/optimizers/simple_optimizer.cpp
  scheduler/optimizers/simulated_annealing_optimizer.cpp
  scheduler/param_optimizer.h
  scheduler/topological_balancer.cpp
)

target_include_directories(HLS PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(HLS
  PUBLIC
    MLIRHIL
    XercesC::XercesC
    LpSolve::LpSolve
    Z3::Z3
    CTemplate::nothreads
    ${STDCXXFS_LIBRARY}
)

add_library(Utopia::HLS ALIAS HLS)
